# OC_LABS

./: .gitignore  README.md
lab1/source/: parent.cpp
lab2/: CMakeLists.txt  main.c
lab2/include/: blur.h
lab2/src/: barrier.c  blur.c
lab3/: main.cpp
tests/: CMakeLists.txt  lab1_test.cpp
курсач/: makefile  server.cpp
лабы/lab2/: main.c
лабы/lab2/src/: blur.c
лабы/lab3/: CMakeLists.txt  lab3_test.cpp
лабы/lab3/src/: .env  parent.cpp
лабы/lab4/: CMakeLists.txt
лабы/lab5-7/: CMakeLists.txt  calculating_node_main.cpp  main.cpp
лабы/lab5-7/include/: calculating_node.h  control_node.h  message.h
лабы/lab5-7/src/: calculating_node.cpp  control_node.cpp  message.cpp
лабы/tests/: CMakeCache.txt  CMakeLists.txt  lab3_test.cpp  lab4_implementation1_test.cpp  lab4_implementation2_test.cpp
